attempts to fix homepage background on mobile

--- a/src/styles/partials/_global.scss
+++ b/src/styles/partials/_global.scss
@@ -11,14 +11,12 @@ html {
 
 body {
   background: $bg-clr;
-  background-attachment: fixed;
-  background-image: url('/blue-paper-bg-vert.jpg');
-  background-size: cover;
   font-family: $font-med;
   height: var(--app-height);
   width: 100%;
 
   @include mq($S) {
+    background-attachment: fixed;
     background-image: url('/blue-paper-bg.jpg');
     background-size: cover;
   }
