--- a/src/styles/partials/components/home/_hero.scss
+++ b/src/styles/partials/components/home/_hero.scss
@@ -1,3 +1,13 @@
+.home__mobile-bg {
+  max-width: none;
+  position: fixed;
+  width: 100%;
+
+  @include mq($S) {
+    display: none;
+  }
+}
+
 .home__hero {
   align-items: center;
   color: $white;
